# vanity-address-generator

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.aarch64-unknown-linux-gnu  Dockerfile.x86_64-unknown-linux-gnu  Makefile  README.md
src/: main.rs
