[package]
name = "vanity-address-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base32 = "0.5.1"
bip39-dict = "0.1.3"
gumdrop = "0.8.1"
hkdf = { version = "0.12.4", features = ["std"] }
indicatif = "0.17.11"
num_cpus = "1.16.0"
pbkdf2 = { version = "0.12.2", features = ["hmac", "parallel", "sha2"] }
rand_core = { version = "0.6", features = ["std"] }
secp256k1 = "0.30.0"
sha2 = { version = "0.10.8", features = ["asm", "sha2-asm"] }
sha3 = { version = "0.10.8", features = ["asm"] }
